# devsecblueprint

./: .gitignore  .semgrep.yml  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  NOTICE  README.md  amplify.yml  docusaurus.config.ts  package-lock.json  package.json  pyproject.toml  sonar-project.properties  tasks.py
.config/: .markdownlint.yaml  .prettierrc
.github/workflows/: contributors.yml  deploy.yml  job-poller.yml  link-checker.yml  lint-format-check.yml  linter.yml  main.yml  plan.yml  pr-preview.yml  pr-title.yml  pr-workflow.yml  pr.yml  pr_preview.yml  pr_title.yml  pr_workflow.yml  security-scan.yml  semgrep.yml  sonarqube.yml
app/: NOTICE  docusaurus.config.ts
app/docs/: index.md
backend/: .dockerignore  Dockerfile  __init__.py  docker-compose.yml  handler.py  lambda-requirements.txt  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/auth/: admin.py  bitbucket.py  github.py  gitlab.py  jwt_utils.py  token_service.py
docs/: SECURITY_SCANNING.md  SONARQUBE.md  faq.md  index.md  membership-deployment-runbook.md  prerequisites.md
frontend/: README.md  content-registry.json  jest.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/lib/: api.ts  (+12 more)
manifests/: deployment.yml  ingress.yml  service.yml
terraform/: README.md  data.tf  main.tf  outputs.tf  provider.tf  providers.tf  variables.tf
tests/: conftest.py  test_admin_auth_integration.py  test_admin_caching.py  test_admin_data_flow_integration.py  test_admin_error_handling_integration.py  test_admin_health.py  test_admin_health_integration.py  test_admin_pagination_performance.py  test_admin_performance.py  test_admin_registry.py  test_admin_users.py  test_admin_walkthrough_statistics.py  test_auth_admin.py  test_auth_github.py  test_auth_jwt.py  test_bug_2_preservation.py  test_bug_2_unauthenticated_submission.py  test_capstone_get.py  test_content_registry.py  test_handler.py  test_handlers_email.py  test_parallel_operation.py  test_progress.py  test_quiz_handler.py  test_quiz_service.py  test_services_dynamo.py  test_services_mailgun.py  test_services_parameter_store.py  test_services_secrets.py  test_sqs_publisher.py  test_stripe_portal.py  test_stripe_service.py  test_stripe_webhook.py  test_utils_responses.py  test_walkthrough_registry.py  test_walkthrough_service.py  test_walkthroughs_handler.py
(+516 files in other folders)
