[project]
name = "devsecblueprint"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==26.3.1",
    "boto3==1.42.82",
    "botocore==1.42.82",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.1",
    "coverage==7.13.5",
    "cryptography==46.0.6",
    "ecdsa==0.19.2",
    "git-remote-codecommit>=1.17",
    "hypothesis==6.151.10",
    "idna==3.11",
    "iniconfig==2.3.0",
    "invoke>=2.2.1",
    "jinja2==3.1.6",
    "jmespath==1.1.0",
    "markupsafe==3.0.3",
    "moto==5.1.22",
    "mypy-extensions==1.1.0",
    "packaging==26.0",
    "pathspec==1.0.4",
    "pip>=26.0.1",
    "platformdirs==4.9.4",
    "pluggy==1.6.0",
    "pyasn1==0.6.3",
    "pycparser==3.0",
    "pygments==2.20.0",
    "pytest>=9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-jose==3.5.0",
    "pytokens==0.4.1",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "responses==0.26.0",
    "rsa==4.9.1",
    "s3transfer==0.16.0",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "urllib3==2.6.3",
    "werkzeug==3.1.8",
    "xmltodict==1.0.4",
]
